# Password-Manager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
middleware/: add.py  delete.py  fetch_data.py  refreshring.py  token_check.py  update.py
views/: auth.py  create.py  home.py  profile.py  refresh.py
views/functions/: __init__.py  jsondic.py
